dev_3100.log

> sistema-natural-nextjs@0.1.0 dev
> next dev --turbopack -p 3100

 ⚠ Warning: Next.js inferred your workspace root, but it may not be correct.
 We detected multiple lockfiles and selected the directory of /home/osbrai/.openclaw/workspace/package-lock.json as the root directory.
 To silence this warning, set `turbopack.root` in your Next.js config, or consider removing one of the lockfiles if it's not needed.
   See https://nextjs.org/docs/app/api-reference/config/next-config-js/turbopack#root-directory for more information.
 Detected additional lockfiles: 
   * /home/osbrai/.openclaw/workspace/projects/sistema-natural-nextjs/package-lock.json

   ▲ Next.js 15.5.10 (Turbopack)
   - Local:        http://localhost:3100
   - Network:      http://192.168.1.71:3100
   - Environments: .env.local

 ✓ Starting...
 ✓ Ready in 838ms
 ○ Compiling / ...
 ✓ Compiled / in 3s
 GET / 200 in 3451ms
 ✓ Compiled /api/events in 166ms
 POST /api/events 200 in 943ms
 ✓ Compiled /favicon.ico in 94ms
 GET /favicon.ico?favicon.0b3bf435.ico 200 in 330ms
 GET / 200 in 133ms
 POST /api/events 200 in 684ms
 GET /favicon.ico?favicon.0b3bf435.ico 200 in 231ms
 GET / 200 in 128ms
 GET / 200 in 179ms
 POST /api/events 200 in 101ms
Meta CAPI Error: SyntaxError: Unexpected end of JSON input
    at JSON.parse (<anonymous>)
    at POST (src/app/api/events/route.ts:5:68)
  3 | export async function POST(req: NextRequest) {
  4 |   try {
> 5 |     const { eventName, eventId, userData, customData } = await req.json();
    |                                                                    ^
  6 |     const pixelId = process.env.NEXT_PUBLIC_META_PIXEL_ID;
  7 |     const accessToken = process.env.META_ACCESS_TOKEN;
  8 |
 POST /api/events 200 in 675ms
 GET /favicon.ico?favicon.0b3bf435.ico 200 in 229ms
 ✓ Compiled in 63ms
 ✓ Compiled in 47ms
 ⚠ Fast Refresh had to perform a full reload due to a runtime error.
 ✓ Compiled in 86ms
 GET / 200 in 391ms
Meta CAPI Error: SyntaxError: Unexpected end of JSON input
    at JSON.parse (<anonymous>)
    at POST (src/app/api/events/route.ts:5:68)
  3 | export async function POST(req: NextRequest) {
  4 |   try {
> 5 |     const { eventName, eventId, userData, customData } = await req.json();
    |                                                                    ^
  6 |     const pixelId = process.env.NEXT_PUBLIC_META_PIXEL_ID;
  7 |     const accessToken = process.env.META_ACCESS_TOKEN;
  8 |
 POST /api/events 200 in 654ms
 GET /favicon.ico?favicon.0b3bf435.ico 200 in 228ms
 ✓ Compiled in 46ms
 ✓ Compiled in 67ms
 ✓ Compiled in 103ms
 ✓ Compiled in 89ms
 ✓ Compiled in 41ms
 ✓ Compiled / in 17ms
 GET / 200 in 145ms
 GET / 200 in 287ms
 POST /api/events 200 in 642ms
 GET /favicon.ico?favicon.0b3bf435.ico 200 in 236ms
 GET / 200 in 136ms
 GET / 200 in 149ms
 POST /api/events 200 in 599ms
 GET / 200 in 132ms
 POST /api/events 200 in 377ms
 GET / 200 in 121ms
 POST /api/events 200 in 624ms
 GET /favicon.ico?favicon.0b3bf435.ico 200 in 227ms
 ✓ Compiled in 110ms
 ✓ Compiled in 64ms
 ✓ Compiled in 59ms
 GET / 200 in 387ms
 POST /api/events 200 in 623ms
 GET /favicon.ico?favicon.0b3bf435.ico 200 in 225ms
 ✓ Compiled in 60ms
 ✓ Compiled in 84ms
 ✓ Compiled in 60ms
 ✓ Compiled in 62ms
 GET / 200 in 369ms
 POST /api/events 200 in 629ms
 GET /favicon.ico?favicon.0b3bf435.ico 200 in 236ms
 ✓ Compiled in 56ms
 GET / 200 in 355ms
 POST /api/events 200 in 634ms
 GET /favicon.ico?favicon.0b3bf435.ico 200 in 233ms
 ✓ Compiled in 46ms
 ✓ Compiled in 61ms
 ✓ Compiled in 48ms
 GET / 200 in 353ms
 GET /favicon.ico?favicon.0b3bf435.ico 200 in 257ms
 POST /api/events 200 in 647ms
 ✓ Compiled in 60ms
 ✓ Compiled in 61ms
 ✓ Compiled in 78ms
 GET /favicon.ico?favicon.0b3bf435.ico 200 in 231ms
 ✓ Compiled in 87ms
 ⨯ ReferenceError: BreathButton is not defined
    at VideoSalesLetter (src/components/sections/VideoSalesLetter.tsx:53:12)
  51 |
  52 |         <div className="mt-8 flex flex-col items-center gap-6">
> 53 |           <BreathButton 
     |            ^
  54 |             href="https://pay.hotmart.com/F104652497O?checkoutMode=10&src=vsl_top"
  55 |             className="w-full max-w-[320px] bg-[#8aad62] hover:bg-[#7a9a56] py-5 rounded-2xl text-lg font-black shadow-[0_20px_40px_-10px_rgba(138,173,98,0.5)] transform transition-all hover:scale-105 active:scale-95"
  56 |           > {
  digest: '2879993990'
}
 GET / 200 in 315ms
 GET /favicon.ico?favicon.0b3bf435.ico 200 in 255ms
 POST /api/events 200 in 615ms
 ⚠ Fast Refresh had to perform a full reload due to a runtime error.
 ✓ Compiled in 80ms
 GET / 200 in 365ms
 GET /favicon.ico?favicon.0b3bf435.ico 200 in 259ms
 POST /api/events 200 in 603ms
 ✓ Compiled in 69ms
 ✓ Compiled in 59ms
 ✓ Compiled in 59ms
 ✓ Compiled in 68ms
